--- a/VaccineManagementSystem/src/UI/Distributor/DistributorAdminWorkArea.form
+++ b/VaccineManagementSystem/src/UI/Distributor/DistributorAdminWorkArea.form
@@ -106,11 +106,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Manage Employee"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMEActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnLog">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Logout"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLogActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnMU">
               <Properties>
