--- a/VaccineManagementSystem/src/UI/Distributor/ManageEmployee.form
+++ b/VaccineManagementSystem/src/UI/Distributor/ManageEmployee.form
@@ -92,7 +92,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Helvetica Neue" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Add Employee"/>
+        <Property name="text" type="java.lang.String" value="Manage Employee"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
