--- a/VaccineManagementSystem/src/UI/Hospital/Pharmacy/PharmacyAdminWorkArea.form
+++ b/VaccineManagementSystem/src/UI/Hospital/Pharmacy/PharmacyAdminWorkArea.form
@@ -90,9 +90,9 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jButtonRequest" min="-2" pref="167" max="-2" attributes="0"/>
                                   <EmptySpace min="77" pref="7" max="32767" attributes="0"/>
-                                  <Component id="jButtonAssignToMe" min="-2" pref="152" max="-2" attributes="0"/>
+                                  <Component id="btnAssign" min="-2" pref="152" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jButtonAccept" min="-2" pref="146" max="-2" attributes="0"/>
+                                  <Component id="btnAccept" min="-2" pref="146" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
                           </Group>
@@ -127,8 +127,8 @@
                   <Component id="jScrollPane2" min="-2" pref="186" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButtonAssignToMe" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButtonAccept" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnAssign" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnAccept" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="vaccineComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtVaccineQty" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -162,7 +162,7 @@
               <Font name="Tahoma" size="24" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Pharmacy "/>
+            <Property name="text" type="java.lang.String" value="Pharmacy WorkRequest Dashboard"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -221,9 +221,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtVaccineQty">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
@@ -231,9 +228,6 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="vaccineComboBox">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
@@ -252,9 +246,6 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonRequest">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="15" style="1"/>
             </Property>
@@ -297,35 +288,32 @@
                   <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblVaccineRequestMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="jButtonAssignToMe">
+        <Component class="javax.swing.JButton" name="btnAssign">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="15" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Assign"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAssignToMeActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAssignActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButtonAccept">
+        <Component class="javax.swing.JButton" name="btnAccept">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="15" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Accept"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAcceptActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAcceptActionPerformed"/>
           </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane3">
@@ -373,9 +361,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtPinCode">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
